Listen button alignment fix for #WE-7820

--- a/app/styles/_site-chrome.scss
+++ b/app/styles/_site-chrome.scss
@@ -168,6 +168,8 @@
   .stream-launcher {
     width: 100%;
     text-align: right;
+    line-height: 24px;
+    font-size: 16px;
 
     .listen-ui {
       width: 24px;
